# iot-mlops-lab

./: .coderabbit.yml  .gitignore  .pre-commit-config.yaml  .taplo.toml  Makefile  README.md  compose.yaml
.github/workflows/: ci-python-apps.yaml  ci-python-common.yaml  ci-workflows.yaml  release-apps.yaml  release-common.yaml  release-python-apps.yaml  release-python-common.yaml
common/: README.md  pyproject.toml
common/src/common/: __init__.py  observability.py
common/tests/: test_config.py
data-pipeline/config/: init.sql  postgres.conf  redis.conf
docker/iot-mlops/: compose.yaml
docker/iot-mlops/app_config/iot-simulator/: logger.toml
docker/iot-mlops/app_config/iot-subscriber/: config.toml  logger.toml
docker/iot-mlops/app_config/redis-to-postgres/: config.toml  local-config.toml  logger.toml
docker/iot-mlops/config/: init.sql  postgres.conf  redis.conf
docker/iot-mlops/observability_config/: prometheus.yaml  tempo.yaml
iot-subscriber/: Dockerfile  README.md  pyproject.toml
iot-subscriber/config/: config.toml  local-config.toml  logger.toml
iot-subscriber/src/iot_subscriber/: config.py  main.py  observability.py  queues.py  subscriber.py
iot-subscriber/tests/: conftest.py  test_config.py  test_subscriber.py
observability/config/: grafana-datasource.yaml  prometheus.yaml  tempo.yaml
python/apps/iot-simulator/: Dockerfile  README.md  pyproject.toml
python/apps/iot-simulator/config/: config.toml
python/apps/iot-simulator/src/iot_simulator/: configs.py  main.py  observability.py  router.py  simulator.py
python/apps/iot-simulator/tests/: conftest.py  mocks.py  test_api.py  test_config.py  test_simulator.py
python/apps/iot-subscriber/: Dockerfile  pip.conf  pyproject.toml
python/apps/iot-subscriber/config/: local-config.toml
python/apps/iot-subscriber/src/iot_subscriber/: __init__.py  config.py  main.py  observability.py  queues.py  subscriber.py
python/apps/iot-subscriber/tests/: conftest.py  test_config.py  test_subscriber.py
python/apps/redis-to-postgres/: Dockerfile  pip.conf  pyproject.toml
python/apps/redis-to-postgres/config/: config.toml  local-config.toml
python/apps/redis-to-postgres/src/redis_to_postgres/: __init__.py  config.py  database.py  main.py  observability.py  worker.py
python/apps/redis-to-postgres/tests/: test_config.py  test_database.py  test_worker.py
python/common/: pyproject.toml
python/common/src/common/: config.py  observability.py
python/common/tests/: test_config.py  test_observability.py
redis-to-postgres/: Dockerfile  README.md  pyproject.toml
redis-to-postgres/config/: config.toml  local-config.toml  logger.toml
redis-to-postgres/src/redis_to_postgres/: __init__.py  config.py  database.py  main.py  observability.py  worker.py
scripts/: run_mypy_changed.sh
simulator/: Dockerfile  README.md  compose.yaml  otel-collector-config.yaml  pyproject.toml
simulator/config/: config.toml  logger.toml
simulator/src/simulator/: __init__.py  configs.py  main.py  observability.py  router.py  simulator.py
simulator/tests/: mocks.py  test_api.py  test_config.py  test_simulator.py
