[project]
name = "redis-to-postgres"
version = "0.1.0"
description = ""
authors = [
    {name = "Seungbae Ji",email = "seungbae.ji@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry]
packages = [{include = "redis_to_postgres", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
asyncpg = ">=0.30.0,<0.31.0"
redis = ">=6.2.0,<7.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
opentelemetry-api = ">=1.34.1,<2.0.0"
opentelemetry-sdk = ">=1.34.1,<2.0.0"
opentelemetry-exporter-otlp = ">=1.34.1,<2.0.0"
prometheus-client = ">=0.22.1,<0.23.0"
# tomli는 Python 3.11 미만에서만 필요

[tool.poetry.scripts]
redis-to-postgres = "redis_to_postgres.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
