[project]
authors = [{ name = "Seungbae Ji", email = "seungbae.ji@gmail.com" }]
dependencies = [
  "opentelemetry-api>=1.34.1",
  "opentelemetry-exporter-otlp>=1.34.1",
  "opentelemetry-sdk>=1.34.1",
  "prometheus-client>=0.22.1",
]
description = ""
name = "mrml-common"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core>=2.0.0,<3.0.0"]

[dependency-groups]
dev = ["mypy>=1.16.1", "pytest>=8.4.1", "pytest-mock>=3.14.1"]

[tool.poetry]
packages = [{ include = "common", from = "src" }]

[[tool.uv.index]]
explicit    = true
name        = "devpi"
publish-url = "https://devpi.gitops.mrml.xyz/seungbae/dev"
url         = "https://devpi.gitops.mrml.xyz/seungbae/dev"

[tool.pytest.ini_options]
addopts    = "-ra -v"
pythonpath = ["src"]
testpaths  = ["tests"]

[tool.mypy]
check_untyped_defs     = true
ignore_missing_imports = true
mypy_path              = "src"
python_version         = "3.12"
strict                 = false

[[tool.mypy.overrides]]
module = "src.common.*"
strict = true

[[tool.mypy.overrides]]
disallow_untyped_defs = false
ignore_errors         = true
module                = "tests.*"
